packages/astro/e2e/fixtures/errors/src/pages/svelte-runtime-error.astro
---
// TODO: Re-enable once Svelte is compatible with Vite v8
// import SvelteRuntimeError from '../components/svelte/SvelteRuntimeError.svelte';
---

<div>
  <!-- <SvelteRuntimeError /> -->
</div>
